--- a/Ruinsmagus_bhaptics.csproj
+++ b/Ruinsmagus_bhaptics.csproj
@@ -74,4 +74,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
+  <PropertyGroup>
+    <PostBuildEvent>XCOPY "$(SolutionDir)bHaptics" "$(TargetDir)\bHaptics\" /S /Y</PostBuildEvent>
+  </PropertyGroup>
 </Project>
